Fixed footer icon alignment issues

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -4,10 +4,13 @@
     width: 100%;
     min-height: 10vmin;
     display: flex;
-    padding: 2em;
+    padding: 1em;
+    flex-wrap: wrap;
 }
 
 .info-container {
+    flex-grow: 1;
+    flex-basis: 300px;
     display: flex;
     width: 60%;
     justify-content:space-evenly;
